apps/rclone/components/tailscale/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp
  annotations:
    tailscale.com/hostname: ftp
    tailscale.com/proxy-class: nishir-rclone
    tailscale.com/tags: tag:ftp
spec:
  loadBalancerClass: tailscale
