apps/rclone/components/tailscale/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp
  namespace: shikanime
  annotations:
    tailscale.com/hostname: ftp
    tailscale.com/tags: tag:ftp
spec:
  loadBalancerClass: tailscale
