apps/rclone/components/tailscale/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rclone
  annotations:
    tailscale.com/proxy-class: rclone
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
